refactor: migrar parseo de Nmap de texto plano a XML