@@ -1,8 +1,14 @@
 package com.networkmonitor.parser;
 
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.networkmonitor.model.Device;
 import com.networkmonitor.model.Port;
 import com.networkmonitor.scanner.ScanResult;
+import com.networkmonitor.scanner.xml.NmapAddress;
+import com.networkmonitor.scanner.xml.NmapHost;
+import com.networkmonitor.scanner.xml.NmapRun;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
@@ -14,12 +20,11 @@ import java.util.Map;
 
 @Component
 @Slf4j
+@RequiredArgsConstructor
 public class NmapParser {
 
-    /**
-     * Combina los dos outputs: MAC/vendor confiables de la Fase 1 (ARP real),
-     * puertos de la Fase 2 (-Pn --send-ip, puede traer MAC sintética que ignoramos).
-     */
+    private final XmlMapper xmlMapper;
+
     public List<Device> parseScan(ScanResult scanResult) {
         Map<String, Device> devicesByIp = parsePhase1(scanResult.phase1Output());
         enrichWithPorts(devicesByIp, scanResult.phase2Output());
@@ -30,118 +35,84 @@ public class NmapParser {
     }
 
     /**
-     * Fase 1: extrae IP, hostname, MAC y vendor. Fuente confiable de identidad.
+     * Fase 1: fuente confiable de IP, hostname, MAC y vendor (ARP real, sin -Pn/--send-ip).
      */
-    private Map<String, Device> parsePhase1(String rawOutput) {
+    private Map<String, Device> parsePhase1(String xmlContent) {
         Map<String, Device> devices = new LinkedHashMap<>();
-        if (rawOutput == null || rawOutput.trim().isEmpty()) {
-            return devices;
-        }
+        List<NmapHost> hosts = parseHosts(xmlContent);
 
-        String[] lines = rawOutput.split("\n");
-        Device currentDevice = null;
+        for (NmapHost host : hosts) {
+            if (!host.isUp()) continue;
+            String ip = host.getIpAddress();
+            if (ip == null) continue;
 
-        for (String rawLine : lines) {
-            String line = rawLine.trim();
+            Device device = new Device();
+            device.setIpAddress(ip);
+            device.setHostName(host.getHostname() != null ? host.getHostname() : "Unknown");
+            device.setFirstSeen(LocalDateTime.now());
+            device.setLastSeen(LocalDateTime.now());
+            device.setOnline(true);
+            device.setKnown(false);
+            device.setPorts(new ArrayList<>());
 
-            if (line.startsWith("Nmap scan report for")) {
-                currentDevice = new Device();
-                currentDevice.setFirstSeen(LocalDateTime.now());
-                currentDevice.setLastSeen(LocalDateTime.now());
-                currentDevice.setOnline(true);
-                currentDevice.setKnown(false);
-                currentDevice.setPorts(new ArrayList<>());
-
-                String info = line.replace("Nmap scan report for ", "");
-                String ip;
-                if (info.contains("(") && info.contains(")")) {
-                    String hostname = info.substring(0, info.indexOf(" ")).trim();
-                    ip = info.substring(info.indexOf("(") + 1, info.indexOf(")")).trim();
-                    currentDevice.setHostName(hostname);
-                } else {
-                    ip = info.trim();
-                    currentDevice.setHostName("Unknown");
-                }
-                currentDevice.setIpAddress(ip);
-                devices.put(ip, currentDevice);
-                continue;
+            NmapAddress mac = host.getMacAddress();
+            if (mac != null) {
+                device.setMacAddress(mac.getAddr());
+                device.setVendor(mac.getVendor() != null ? mac.getVendor() : "Unknown Vendor");
             }
 
-            if (currentDevice == null) continue;
-
-            if (line.startsWith("MAC Address:")) {
-                String macInfo = line.replace("MAC Address: ", "");
-                if (macInfo.contains(" ")) {
-                    String mac = macInfo.substring(0, macInfo.indexOf(" ")).trim();
-                    String vendor = macInfo.substring(macInfo.indexOf("(") + 1, macInfo.indexOf(")")).trim();
-                    currentDevice.setMacAddress(mac);
-                    currentDevice.setVendor(vendor);
-                } else {
-                    currentDevice.setMacAddress(macInfo.trim());
-                    currentDevice.setVendor("Unknown Vendor");
-                }
-            }
+            devices.put(ip, device);
         }
         return devices;
     }
 
     /**
-     * Fase 2: solo extrae puertos, uniendo por IP con lo ya armado en la Fase 1.
-     * Deliberadamente NO lee "MAC Address:" aquí -Pn/--send-ip puede devolver una MAC sintética.
+     * Fase 2: solo aporta puertos, uniendo por IP. Deliberadamente NO se lee la MAC aquí
+     * -Pn/--send-ip puede devolver una MAC sintética (ver notas del blueprint).
      */
-    private void enrichWithPorts(Map<String, Device> devicesByIp, String rawOutput) {
-        if (rawOutput == null || rawOutput.trim().isEmpty()) {
-            return;
+    private void enrichWithPorts(Map<String, Device> devicesByIp, String xmlContent) {
+        if (xmlContent == null || xmlContent.isBlank()) return;
+
+        List<NmapHost> hosts = parseHosts(xmlContent);
+
+        for (NmapHost host : hosts) {
+            String ip = host.getIpAddress();
+            if (ip == null) continue;
+
+            Device device = devicesByIp.computeIfAbsent(ip, k -> {
+                Device d = new Device();
+                d.setIpAddress(ip);
+                d.setHostName("Unknown");
+                d.setFirstSeen(LocalDateTime.now());
+                d.setLastSeen(LocalDateTime.now());
+                d.setOnline(true);
+                d.setKnown(false);
+                d.setPorts(new ArrayList<>());
+                return d;
+            });
+
+            if (host.getPorts() == null || host.getPorts().getPortList() == null) continue;
+
+            host.getPorts().getPortList().forEach(nmapPort -> {
+                Port port = Port.builder()
+                        .portNumber(nmapPort.getPortid())
+                        .protocol(nmapPort.getProtocol().toUpperCase())
+                        .state(nmapPort.getState() != null ? nmapPort.getState().getState() : "unknown")
+                        .service(nmapPort.getService() != null ? nmapPort.getService().getName() : "unknown")
+                        .device(device)
+                        .build();
+                device.getPorts().add(port);
+            });
         }
+    }
 
-        String[] lines = rawOutput.split("\n");
-        Device currentDevice = null;
-
-        for (String rawLine : lines) {
-            String line = rawLine.trim();
-
-            if (line.startsWith("Nmap scan report for")) {
-                String info = line.replace("Nmap scan report for ", "");
-                String ip = info.contains("(") && info.contains(")")
-                        ? info.substring(info.indexOf("(") + 1, info.indexOf(")")).trim()
-                        : info.trim();
-
-                // Reutiliza el Device de la Fase 1; si por algún motivo no existe, lo crea (caso borde)
-                currentDevice = devicesByIp.computeIfAbsent(ip, k -> {
-                    Device d = new Device();
-                    d.setIpAddress(ip);
-                    d.setHostName("Unknown");
-                    d.setFirstSeen(LocalDateTime.now());
-                    d.setLastSeen(LocalDateTime.now());
-                    d.setOnline(true);
-                    d.setKnown(false);
-                    d.setPorts(new ArrayList<>());
-                    return d;
-                });
-                continue;
-            }
-
-            if (currentDevice == null) continue;
-
-            if (line.matches("^\\d+/\\w+\\s+\\w+\\s+.*")) {
-                String[] parts = line.split("\\s+");
-                if (parts.length >= 3) {
-                    String[] portAndProto = parts[0].split("/");
-                    int portNumber = Integer.parseInt(portAndProto[0]);
-                    String protocol = portAndProto[1].toUpperCase();
-                    String state = parts[1];
-                    String service = parts[2];
-
-                    Port port = Port.builder()
-                            .portNumber(portNumber)
-                            .protocol(protocol)
-                            .state(state)
-                            .service(service)
-                            .device(currentDevice)
-                            .build();
-                    currentDevice.getPorts().add(port);
-                }
-            }
+    private List<NmapHost> parseHosts(String xmlContent) {
+        try {
+            NmapRun run = xmlMapper.readValue(xmlContent, NmapRun.class);
+            return run.getHosts() != null ? run.getHosts() : List.of();
+        } catch (Exception e) {
+            log.error("Error al parsear XML de Nmap: ", e);
+            return List.of();
         }
     }
 }
